# basin-bmp-scenario-sim

./: .gitignore  pyproject.toml  readme.md  requirements.txt  run_model.py
examples/: _create_inputs.py  east_fork.yaml
examples/east_fork/: east_fork.yaml
examples/east_fork/inputs/: bmp_cost.csv
examples/east_fork/outputs/: bmp_summaries_s1.csv  bmp_summaries_s2.csv  bmp_summaries_s3.csv  bmp_summaries_s4.csv  bmp_summaries_s5.csv  bmps.csv  bmps_s1.csv  bmps_s2.csv  bmps_s3.csv  bmps_s4.csv  bmps_s5.csv  log_s1.txt  log_s2.txt  log_s3.txt  log_s4.txt  log_s5.txt  parcels.csv  parcels_s1.csv  parcels_s2.csv  parcels_s3.csv  parcels_s4.csv  parcels_s5.csv
examples/east_fork/outputs/bmps/: s1.csv  s2.csv  s3.csv  s4.csv  s5.csv
examples/east_fork/outputs/logs/: s1.txt  s2.txt  s3.txt  s4.txt  s5.txt
examples/east_fork/outputs/parcels/: s1.csv  s2.csv  s3.csv  s4.csv  s5.csv
examples/inputs/: bmp_cost.csv  bmp_efficiency.csv  delivery_ratios.csv  domain.gpkg  outlet_loc.gpkg  outlet_mean.csv  outlet_target.csv  parcel_out.csv  parcel_p.csv  parcel_up.csv  parcels.gpkg  pollutant_yield.csv
outputs/: log_20260515_125206.txt  log_20260515_134849.txt  log_20260515_143451.txt  scenario_001_bmps.csv  scenario_001_parcels.csv  scenario_002_bmps.csv  scenario_002_parcels.csv  scenario_003_bmps.csv  scenario_003_parcels.csv
src/: bmp.py  bmp_summary.py  constants.py  cost.py  costs.py  io_utils.py  logging_utils.py  model.py  parcel.py  plotting.py  sampling.py  scenario.py  selection.py  simulate.py  summaries.py  utils.py
(+6 files in other folders)
